--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "jwt-decode": "^3.1.2",
     "native-base": "^3.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
